--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@
 		</div>
 		<div class="col-md-4"> 
 		  <h4>Bio</h4>
-		  <p><strong>Tamara</strong> graduated from Duke University in 2011 with degrees in Electrical & Computer Engineering and Economics. After working at the <a href="http://www.brattle.com/">Brattle Group</a>, Jeff fell in love with business analytics and came to Harvard to learn more about Data Science.</p>
+		  <p><strong>Tamara</strong> graduated from Duke University in 2011 with a degree in Biomedical Engineering. After working at the <a href="http://www.putassoc.com/">Putnam Associates</a>, Jeff fell in love with business analytics and came to Harvard to learn more about Data Science.</p>
 		</div>
 		<div class="col-md-4">
 		  <h4>Education</h4>
