Added new picture

--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
 	  <div class="row">
 		<div class="col-md-4">
 		  <div class="thumbnail">
-			<img src="./img/Profile Picture.jpg">
+			<img src="./img/Profile Picture-Tamara.jpg">
 		  </div>
 		  </br>
 		    </br>
@@ -84,15 +84,14 @@
 		</div>
 		<div class="col-md-4"> 
 		  <h4>Bio</h4>
-		  <p><strong>Tamara</strong> graduated from Duke University in 2011 with a degree in Biomedical Engineering. After working at the <a href="http://www.putassoc.com/", target="_blank">Putnam Associates</a>, Jeff fell in love with business analytics and came to Harvard to learn more about Data Science.</p>
+		  <p><strong>Tamara</strong> graduated from Duke University in 2011 with a degree in Biomedical Engineering. After working at the <a href="http://www.putassoc.com/", target="_blank">Putnam Associates</a>, Tamara fell in love with business analytics and came to Harvard to learn more about Data Science.</p>
 		</div>
 		<div class="col-md-4">
 		  <h4>Education</h4>
 		  <p><strong>Harvard University</strong></p>
-		  <p>M.S. Computational Science</p>
+		  <p>M.S. Biostatistics</p>
 		  <p><strong>Duke University</strong></p>
-		  <p>B.S.E. Electrical & Computer Engineering
-		  <br>B.S.   Economics</p>
+		  <p>B.S.E. Biomedical Engineering
 		</div>
 		<div class="clearfix visible-lg"></div>
 	  </div>
