Updated LinkedIn and github links

--- a/index.htm
+++ b/index.htm
@@ -46,8 +46,8 @@
         <li><a href="./contact.htm">CONTACT</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-		<li><a href="https://www.linkedin.com/in/jeffreysshen" target="_blank">LINKEDIN</a></li>
-		<li><a href="https://github.com/shenjeffrey" target="_blank">GITHUB</a></li>
+		<li><a href="https://www.linkedin.com/in/tklouie" target="_blank">LINKEDIN</a></li>
+		<li><a href="https://github.com/tklouie" target="_blank">GITHUB</a></li>
       </ul>
     </div>
   </div>
