--- a/projects.htm
+++ b/projects.htm
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>Jeffrey Shen Website</title>
+		<title>Tamara Louie Website</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="./bootstrap-3.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -43,8 +43,8 @@
         <li><a href="./contact.htm">CONTACT</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-		<li><a href="https://www.linkedin.com/in/jeffreysshen" target="_blank">LINKEDIN</a></li>
-		<li><a href="https://github.com/shenjeffrey" target="_blank">GITHUB</a></li>
+		<li><a href="https://www.linkedin.com/in/tklouie" target="_blank">LINKEDIN</a></li>
+		<li><a href="https://github.com/tklouie" target="_blank">GITHUB</a></li>
       </ul>
     </div>
   </div>
