--- a/work.htm
+++ b/work.htm
@@ -33,7 +33,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-      <a class="navbar-brand" href="./index.htm">Jeffrey Shen</a>
+      <a class="navbar-brand" href="./index.htm">Tamara Louie</a>
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
