--- a/education.htm
+++ b/education.htm
@@ -75,9 +75,9 @@
 		<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 		  <div class="panel-body">
 			<h5><strong>Degree</strong></h5>
-			<p>M.S. Computational Science</p>
+			<p>M.S. Biostatistics</p>
 			<h5><strong>Coursework</strong></h5>
-			<p>Data Science, Software Engineering Design, Statistical Linear Models, Computational Data Science Seminar.</p>
+			<p>Data Mining and Prediction, Statistical Inference, Regression and Analysis of Variance, Analysis of Rates and Proportions, Fundamentals of Epidemiology, Decision Analysis, Biological and Social Networks.</p>
 		  </div>
 		</div>
 	  </div>
@@ -92,18 +92,11 @@
 		<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 		  <div class="panel-body">
 			<h5><strong>Degrees</strong></h5>
-			<p>B.S.E. Electrical & Computer Engineering
-			<br>B.S.   Economics</p>
-			<h5><strong>Awards & Honors</strong></h5>
-			<p><em>magna cum laude</em>
-			<br>Distinction in Electrical & Computer Engineering with Thesis
-			<br>Distinction in Economics with Thesis
-			<br>Allen Starling Johnson, Jr. Best Thesis Prize by Duke Economics Department in 2011
-			<br>Phi Beta Kappa
-			<br>Tau Beta Pi</p>
+			<p>B.S.E. Biomedical Engineering
+			<h5><strong>Coursework</strong></h5>
+			<p>Introduction to Computer Science, Statistics and Probability, Linear Algebra, Ordinary and Partial Differential Equations, Computation Methods in Engineering.</p>
 			<h5><strong>Fellowships</strong></h5>		
-			<p>Pratt School of Engineering Undergraduate Research Fellowship in 2010
-			<br>Howard Hughes Vertically Integrated Program Research Fellowship in 2009</p>
+			<p>Pratt School of Engineering Undergraduate Research Fellowship in 2010-2011
 		  </div>
 		</div>
 	  </div>
