--- a/work.htm
+++ b/work.htm
@@ -68,13 +68,14 @@
 		<div class="panel-heading" role="tab" id="headingOne">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-			  <h4>THE BRATTLE GROUP</h4>
+			  <h4>PUTNAM ASSOCIATES</h4>
 			</a>
 		  </h4>
 		</div>
 		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
 		  <div class="panel-body">
-			<p>Senior Research Analyst (2012-2014)</p>
+			<p>Associate Consultant (2012-2014)</p>
+			<p>Analyst (2011-2012)</p>			
 		  </div>
 		</div>
 	  </div>	  
