Updated projects and summary bio

--- a/education.htm
+++ b/education.htm
@@ -91,7 +91,7 @@
 		</div>
 		<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 		  <div class="panel-body">
-			<h5><strong>Degrees</strong></h5>
+			<h5><strong>Degree</strong></h5>
 			<p>B.S.E. Biomedical Engineering
 			<h5><strong>Coursework</strong></h5>
 			<p>Introduction to Computer Science, Statistics and Probability, Linear Algebra, Ordinary and Partial Differential Equations, Computation Methods in Engineering.</p>
