--- a/projects.htm
+++ b/projects.htm
@@ -68,14 +68,16 @@
 		<div class="panel-heading" role="tab" id="headingOne2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
-			  <h4>DATA SCIENCE</h4>
+			  <h4>DATA VISUALIZATION</h4>
 			</a>
 		  </h4>
 		</div>
 		<div id="collapseOne2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne2">
 		  <div class="panel-body">
-			<em>Coming soon</em>
-		  </div>
+			<p><a href="https://public.tableausoftware.com/profile/tamara.l.#!/vizhome/FluVaccinationinU_S_/Dashboard" target="_blank"><strong>Visualizing Data Using Tableau</strong></a>
+			<br><strong>Techniques:</strong> Data visualization.
+			<br>I used U.S. Center for Disease Control (CDC) data to visualize flu vaccination rates during the 2013-2014 flu season using Tableau.</p>
+			  </div>
 		</div>
 	  </div>
 	  <div class="panel panel-default">
@@ -88,7 +90,9 @@
 		</div>
 		<div id="collapseTwo2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo2">
 		  <div class="panel-body">
-			<em>Coming soon</em>
+			<p><a href="https://github.com/tklouie/Examples_Regression" target="_blank"><strong>Modeling Predictors of Health Outcomes Using R, Python, and STATA</strong></a>
+			<br><strong>Techniques:</strong> regression, generalized additive models.
+			<br>I used publicly available data from the Framingham Heart Study to analyze the role of systolic blood pressure in predicting coronary heart disease using R, Python, and Stata, with a detailed written report of my findings using Microsoft Word.</p>			
 		  </div>
 		</div>
 	  </div>
@@ -96,7 +100,7 @@
 		<div class="panel-heading" role="tab" id="headingThree2">
 		  <h4 class="panel-title">
 			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="false" aria-controls="collapseThree2">
-			  <h4>NETWORKS</h4>
+			  <h4>DATA SCIENCE</h4>
 			</a>
 		  </h4>
 		</div>
