Added project with Examples_Machine_Learning example

--- a/projects.htm
+++ b/projects.htm
@@ -106,7 +106,9 @@
 		</div>
 		<div id="collapseThree2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree2">
 		  <div class="panel-body">
-			<em>Coming soon</em>
+<p><a href="https://github.com/tklouie/Examples_Natural_Language_Processing" target="_blank"><strong>Sentiment Analysis On Gilmore Girls' Subreddit Data from Reddit Crawler</strong></a>
+			<br><strong>Techniques:</strong> reddit crawling, sentiment analysis, natural language processing.
+			<br>I used publicly available data from Reddit, an online community, using the Gilmore Girls' subreddit as training and testing data to predict sentiment of subreddit comments using Python.</p>			
 			</div>
 		  </div>
 		</div>
