Updated bio and projects

--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@
 		</div>
 		<div class="col-md-4"> 
 		  <h4>Bio</h4>
-		  <p><strong>Tamara</strong> graduated from Duke University in 2011 with a degree in Biomedical Engineering. After working at <a href="http://www.putassoc.com/", target="_blank">Putnam Associates</a>, Tamara became interested in the use of data analytics in business and came to Harvard to learn more about statistics and data analytics.</p>
+		  <p><strong>Tamara</strong> is currently a Data Scientist in Revenue Product Analytics and Forecasting at Twitter. She finished her Masters degree in Biostatistics at Harvard in December 2016, where she learned more about statistics, machine learning, and data science. Prior, she worked for three years in strategy consulting at Putnam Associates after graduating from Duke University in 2011 with a degree in Biomedical Engineering.</p>
 		</div>
 		<div class="col-md-4">
 		  <h4>Education</h4>
