Updated education section

--- a/education.htm
+++ b/education.htm
@@ -77,7 +77,12 @@
 			<h5><strong>Degree</strong></h5>
 			<p>M.S. Biostatistics</p>
 			<h5><strong>Coursework</strong></h5>
-			<p>Data Mining and Prediction, Statistical Inference, Regression and Analysis of Variance, Analysis of Rates and Proportions, Fundamentals of Epidemiology, Decision Analysis, Biological and Social Networks.</p>
+			<p>Machine Learning, Data Mining and Prediction, Statistical Inference, Regression and Analysis of Variance (linear regression / continuous outcome regression), Analysis of Rates and Proportions (logistic regression / categorical outcome regression), Longitudinal / Time-Series Analysis, Survival Analysis, Fundamentals of Epidemiology, Decision Analysis, Biological and Social Networks, Environmental Health.</p>
+			<h5><strong>Thesis</strong></h5>
+			<p>Limits of Mechanistic Models versus Machine Learning Models for Influenza Forecasting in the United States.</p>
+			<h5><strong>Publication</strong></h5>
+			<p>M. Santillana, A.T. Nguyen, T. Louie, A. Zink, J. Gray, I. Sung, J.S. Brownstein (2016). Cloud-based Electronic Health Records for Real-time, Region-specific Influenza Surveillance. Scientific Reports 6, Article number: 25732. 
+			<a href="http://www.nature.com/articles/srep25732" target="_blank"><strong>http://www.nature.com/articles/srep25732</strong></a></p>
 		  </div>
 		</div>
 	  </div>
