Updated education and work sections of website

--- a/work.htm
+++ b/work.htm
@@ -78,7 +78,38 @@
 			<p>Analyst (2011-2012)</p>			
 		  </div>
 		</div>
+	  </div>
+	  <div class="panel panel-default">
+		<div class="panel-heading" role="tab" id="headingOne">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			  <h4>LEGENDARY ENTERTAINMENT</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+		  <div class="panel-body">
+			<p>Data Scientist Intern (Jun. 2015-Aug. 2015)</p>		
+		  </div>
+		</div>
 	  </div>	  
+
+	  <div class="panel panel-default">
+		<div class="panel-heading" role="tab" id="headingOne">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			  <h4>TWITTER</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+		  <div class="panel-body">
+			<p>Data Scientist, Revenue Product Analytics and Forecasting (Jan. 2016-Present)</p>		
+		  </div>
+		</div>
+	  </div>	  
+
+	  
 	</div>
 </div>
 
