--- a/education.htm
+++ b/education.htm
@@ -79,7 +79,7 @@
 			<h5><strong>Thesis</strong></h5>
 			<p>Limits of Mechanistic Models versus Machine Learning Models for Influenza Forecasting in the United States.</p>
 			<h5><strong>Publication</strong></h5>
-			<p>M. Santillana, A.T. Nguyen, T. Louie, A. Zink, J. Gray, I. Sung, J.S. Brownstein (2016). Cloud-based Electronic Health Records for Real-time, Region-specific Influenza Surveillance. Scientific Reports 6, Article number: 25732. 
+			<p>M. Santillana, A.T. Nguyen, <strong>T. Louie</strong>, A. Zink, J. Gray, I. Sung, J.S. Brownstein (2016). Cloud-based Electronic Health Records for Real-time, Region-specific Influenza Surveillance. Scientific Reports 6, Article number: 25732. 
 			<a href="http://www.nature.com/articles/srep25732" target="_blank"><strong>http://www.nature.com/articles/srep25732</strong></a></p>
 			<h5><strong>Coursework</strong></h5>
 			<p>Machine Learning
@@ -109,7 +109,11 @@
 			<h5><strong>Degree</strong></h5>
 			<p>B.S.E. Biomedical Engineering
 			<h5><strong>Coursework</strong></h5>
-			<p>Introduction to Computer Science, Statistics and Probability, Linear Algebra, Ordinary and Partial Differential Equations, Computation Methods in Engineering.</p>
+			<p>Introduction to Computer Science
+			</br>Statistics and Probability
+			</br>Linear Algebra
+			</br>Ordinary and Partial Differential Equations
+			</br>Computation Methods in Engineering.</p>
 			<h5><strong>Fellowships</strong></h5>		
 			<p>Pratt School of Engineering Undergraduate Research Fellowship in 2010-2011
 		  </div>
