--- a/education.htm
+++ b/education.htm
@@ -92,7 +92,7 @@
 			</br>Fundamentals of Epidemiology
 			</br>Decision Analysis
 			</br>Biological and Social Networks
-			</br>Environmental Health.</p>
+			</br>Environmental Health</p>
 		  </div>
 		</div>
 	  </div>
@@ -113,7 +113,7 @@
 			</br>Statistics and Probability
 			</br>Linear Algebra
 			</br>Ordinary and Partial Differential Equations
-			</br>Computation Methods in Engineering.</p>
+			</br>Computation Methods in Engineering</p>
 			<h5><strong>Fellowships</strong></h5>		
 			<p>Pratt School of Engineering Undergraduate Research Fellowship in 2010-2011
 		  </div>
