Updated work section

--- a/work.htm
+++ b/work.htm
@@ -90,14 +90,14 @@
 			<p>Data Scientist Intern (Jun. 2015-Aug. 2015)</p>		
 		  </div>
 		</div>
-		<div class="panel-heading" role="tab" id="headingOne">
+		<div class="panel-heading" role="tab" id="headingTwo">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 			  <h4>TWITTER</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 		  <div class="panel-body">
 			<p>Data Scientist, Revenue Product Analytics and Forecasting (Jan. 2016-Present)</p>		
 		  </div>
