Updated work again - will comment better in future- and make fewer commits

--- a/work.htm
+++ b/work.htm
@@ -78,26 +78,26 @@
 			<p>Analyst (2011-2012)</p>			
 		  </div>
 		</div>
-		<div class="panel-heading" role="tab" id="headingOne">
+		<div class="panel-heading" role="tab" id="headingTwo">
 		  <h4 class="panel-title">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
 			  <h4>LEGENDARY ENTERTAINMENT</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+		<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 		  <div class="panel-body">
 			<p>Data Scientist Intern (Jun. 2015-Aug. 2015)</p>		
 		  </div>
 		</div>
-		<div class="panel-heading" role="tab" id="headingTwo">
+		<div class="panel-heading" role="tab" id="headingThree">
 		  <h4 class="panel-title">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
 			  <h4>TWITTER</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+		<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 		  <div class="panel-body">
 			<p>Data Scientist, Revenue Product Analytics and Forecasting (Jan. 2016-Present)</p>		
 		  </div>
