Updated summary for profile

--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@
 		</div>
 		<div class="col-md-4"> 
 		  <h4>Bio</h4>
-		  <p><strong>Tamara</strong> is currently a Data Scientist in Revenue Product Analytics and Forecasting at Twitter. She finished her Masters degree in Biostatistics at Harvard in December 2016, where she learned more about statistics, machine learning, and data science. Prior, she worked for three years in strategy consulting at Putnam Associates after graduating from Duke University in 2011 with a degree in Biomedical Engineering.</p>
+		  <p><strong>Tamara</strong> is currently a Data Scientist working with consumer-side recommendation and machine learning teams at Pinterest. Previously, she worked as a Data Scientist at Twitter, working with Ads Product teams and time series forecasting teams.</p>
 		</div>
 		<div class="col-md-4">
 		  <h4>Education</h4>
