Updated work profile history

--- a/work.htm
+++ b/work.htm
@@ -74,7 +74,7 @@
 		</div>
 		<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
 		  <div class="panel-body">
-			<p>Associate Consultant (2012-2014)</p>
+			<p>Associate Consultant (2012 - 2014)</p>
 			<p>Analyst (2011-2012)</p>			
 		  </div>
 		</div>
@@ -87,7 +87,7 @@
 		</div>
 		<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 		  <div class="panel-body">
-			<p>Data Scientist Intern (Jun. 2015-Aug. 2015)</p>		
+			<p>Data Scientist Intern (Jun. 2015 - Aug. 2015)</p>		
 		  </div>
 		</div>
 		<div class="panel-heading" role="tab" id="headingThree">
@@ -99,7 +99,19 @@
 		</div>
 		<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 		  <div class="panel-body">
-			<p>Data Scientist, Revenue Product Analytics and Forecasting (Jan. 2016-Present)</p>		
+			<p>Data Scientist, Ads Product and Time Series Forecasting (Jan. 2016 - Feb. 2017)</p>		
+		  </div>
+		</div>
+		<div class="panel-heading" role="tab" id="headingFour">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseTour">
+			  <h4>PINTEREST</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+		  <div class="panel-body">
+			<p>Data Scientist, Content and Discovery Engineering (consumer-side recommendation and machine learning teams) (Feb. 2017 - Present)</p>		
 		  </div>
 		</div>
 	  </div>
