--- a/contact.htm
+++ b/contact.htm
@@ -62,7 +62,7 @@
   </br>
 <div class="container">
 	<h2>CONTACT</h2>
-	<p><strong>E-mail:</strong> louie.tamara at gmail.com</p>
+	<p>See my LinkedIn profile for contact info.</p>
 </div>
 
 <!-- Bootstrap core JavaScript. Placed at the end of the document so the pages load faster. -->
