Added section on ts forecasting

--- a/projects.htm
+++ b/projects.htm
@@ -68,6 +68,22 @@
 		<div class="panel-heading" role="tab" id="headingOne2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
+			  <h4>TIME SERIES FORECASTING</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseOne2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne2">
+		  <div class="panel-body">
+			<p><a href="https://www.youtube.com/watch?v=JntA9XaTebs" target="_blank"><strong>Applying Statistical Modeling & Machine Learning to Perform Time-Series Forecasting</strong></a>
+			<br><strong>Techniques:</strong> Time-series forecasting.
+			<br>I used publicly available Airbnb data to perform time-series forecasting using statistical and machine learning models.</p>
+			  </div>
+		</div>
+	  </div>
+	  <div class="panel panel-default">
+		<div class="panel-heading" role="tab" id="headingOne2">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
 			  <h4>DATA VISUALIZATION</h4>
 			</a>
 		  </h4>
