Added section on big data and network science

--- a/projects.htm
+++ b/projects.htm
@@ -84,6 +84,22 @@
 		<div class="panel-heading" role="tab" id="headingOne2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
+			  <h4>BIG DATA AND NETWORK SCIENCE</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseOne2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne2">
+		  <div class="panel-body">
+			<p><a href="https://medium.com/pinterest-engineering/adventures-in-big-data-wonderland-going-down-the-pinterest-path-49f6af21f6b5" target="_blank"><strong>Adventures in big data wonderland: Going down the Pinterest Path</strong></a>
+			<br><strong>Techniques:</strong> Hadoop, MapReduce, big data, network science.
+			<br>I productionized graphical network metrics in Python in a distributed manner at scale, using a Hadoop framework (Hive).</p>
+			  </div>
+		</div>
+	  </div>
+	  <div class="panel panel-default">
+		<div class="panel-heading" role="tab" id="headingOne2">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
 			  <h4>DATA VISUALIZATION</h4>
 			</a>
 		  </h4>
