--- a/projects.htm
+++ b/projects.htm
@@ -81,7 +81,7 @@
 		</div>
 	  </div>
 	  <div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingOne2">
+		<div class="panel-heading" role="tab" id="headingTwo2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
 			  <h4>BIG DATA AND NETWORK SCIENCE</h4>
@@ -97,7 +97,7 @@
 		</div>
 	  </div>
 	  <div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingOne2">
+		<div class="panel-heading" role="tab" id="headingThree2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
 			  <h4>DATA VISUALIZATION</h4>
@@ -113,7 +113,7 @@
 		</div>
 	  </div>
 	  <div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingTwo2">
+		<div class="panel-heading" role="tab" id="headingFour2">
 		  <h4 class="panel-title">
 			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
 			  <h4>STATISTICS</h4>
@@ -129,7 +129,7 @@
 		</div>
 	  </div>
 	  <div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingThree2">
+		<div class="panel-heading" role="tab" id="headingFive2">
 		  <h4 class="panel-title">
 			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="false" aria-controls="collapseThree2">
 			  <h4>DATA SCIENCE</h4>
