--- a/projects.htm
+++ b/projects.htm
@@ -83,12 +83,12 @@
 	  <div class="panel panel-default">
 		<div class="panel-heading" role="tab" id="headingTwo2">
 		  <h4 class="panel-title">
-			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
+			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2" aria-expanded="true" aria-controls="collapseTwo2">
 			  <h4>BIG DATA AND NETWORK SCIENCE</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseOne2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne2">
+		<div id="collapseTwo2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo2">
 		  <div class="panel-body">
 			<p><a href="https://medium.com/pinterest-engineering/adventures-in-big-data-wonderland-going-down-the-pinterest-path-49f6af21f6b5" target="_blank"><strong>Adventures in big data wonderland: Going down the Pinterest Path</strong></a>
 			<br><strong>Techniques:</strong> Hadoop, MapReduce, big data, network science.
@@ -99,12 +99,12 @@
 	  <div class="panel panel-default">
 		<div class="panel-heading" role="tab" id="headingThree2">
 		  <h4 class="panel-title">
-			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
+			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="true" aria-controls="collapseThree2">
 			  <h4>DATA VISUALIZATION</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseOne2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne2">
+		<div id="collapseThree2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree2">
 		  <div class="panel-body">
 			<p><a href="https://public.tableausoftware.com/profile/tamara.l.#!/vizhome/FluVaccinationinU_S_/Dashboard" target="_blank"><strong>Visualizing Data Using Tableau</strong></a>
 			<br><strong>Techniques:</strong> Data visualization.
@@ -115,12 +115,12 @@
 	  <div class="panel panel-default">
 		<div class="panel-heading" role="tab" id="headingFour2">
 		  <h4 class="panel-title">
-			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
+			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour2" aria-expanded="false" aria-controls="collapseFour2">
 			  <h4>STATISTICS</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseTwo2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo2">
+		<div id="collapseFour2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour2">
 		  <div class="panel-body">
 			<p><a href="https://github.com/tklouie/Examples_Regression" target="_blank"><strong>Modeling Predictors of Health Outcomes Using R, Python, and STATA</strong></a>
 			<br><strong>Techniques:</strong> regression, generalized additive models.
@@ -131,12 +131,12 @@
 	  <div class="panel panel-default">
 		<div class="panel-heading" role="tab" id="headingFive2">
 		  <h4 class="panel-title">
-			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="false" aria-controls="collapseThree2">
+			<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive2" aria-expanded="false" aria-controls="collapseFive2">
 			  <h4>DATA SCIENCE</h4>
 			</a>
 		  </h4>
 		</div>
-		<div id="collapseThree2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree2">
+		<div id="collapseFive2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive2">
 		  <div class="panel-body">
 <p><a href="https://github.com/tklouie/Examples_Natural_Language_Processing" target="_blank"><strong>Sentiment Analysis On Gilmore Girls' Subreddit Data from Reddit Crawler</strong></a>
 			<br><strong>Techniques:</strong> reddit crawling, sentiment analysis, natural language processing.
