Added section on conferences and presentations

--- a/projects.htm
+++ b/projects.htm
@@ -100,15 +100,25 @@
 		<div class="panel-heading" role="tab" id="headingThree2">
 		  <h4 class="panel-title">
 			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2" aria-expanded="true" aria-controls="collapseThree2">
-			  <h4>DATA VISUALIZATION</h4>
+			  <h4>CONFERENCES AND PRESENTATIONS</h4>
 			</a>
 		  </h4>
 		</div>
 		<div id="collapseThree2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree2">
 		  <div class="panel-body">
-			<p><a href="https://public.tableausoftware.com/profile/tamara.l.#!/vizhome/FluVaccinationinU_S_/Dashboard" target="_blank"><strong>Visualizing Data Using Tableau</strong></a>
-			<br><strong>Techniques:</strong> Data visualization.
-			<br>I used U.S. Center for Disease Control (CDC) data to visualize flu vaccination rates during the 2013-2014 flu season using Tableau.</p>
+			<p><a href="https://docs.google.com/document/d/18ssboiAJTkF-smbH274gODdZXVD7MnX_tUQG5OnfQGY/edit" target="_blank"><strong>Mention of my poster at Neural-IPS Conference 2016</strong></a>
+			<br><strong>Techniques:</strong> Presentation.
+			<br>I presented my publication at a poster session for the Women in Machine Learning (WiML) Workshop at the Neural-IPS Conference 2016.</p>
+			  </div>
+		  <div class="panel-body">
+			<p><a href="https://medium.com/athena-talks/grace-hopper-2017-a-recap-5982c029d7ba" target="_blank"><strong>Review of my roundtable session at Grace Hopper Conference 2017</strong></a>
+			<br><strong>Techniques:</strong> Presentation.
+			<br>I hosted a workshop on transitioning into data science at the Grace Hopper Conference 2017.</p>
+			  </div>	
+		  <div class="panel-body">
+			<p><a href="https://www.youtube.com/watch?v=JntA9XaTebs" target="_blank"><strong>YouTube video of my tutorial on time-series forecasting at PyData LA 2018</strong></a>
+			<br><strong>Techniques:</strong> Presentation.
+			<br>I led a tutorial on time-series forecasting at PyData LA 2018.</p>
 			  </div>
 		</div>
 	  </div>
@@ -145,6 +155,23 @@
 		  </div>
 		</div>
 	  </div>
+	  <div class="panel panel-default">
+		<div class="panel-heading" role="tab" id="headingSix2">
+		  <h4 class="panel-title">
+			<a data-toggle="collapse" data-parent="#accordion2" href="#collapseSix2" aria-expanded="true" aria-controls="collapseSix2">
+			  <h4>DATA VISUALIZATION</h4>
+			</a>
+		  </h4>
+		</div>
+		<div id="collapseSix2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix2">
+		  <div class="panel-body">
+			<p><a href="https://public.tableausoftware.com/profile/tamara.l.#!/vizhome/FluVaccinationinU_S_/Dashboard" target="_blank"><strong>Visualizing Data Using Tableau</strong></a>
+			<br><strong>Techniques:</strong> Data visualization.
+			<br>I used U.S. Center for Disease Control (CDC) data to visualize flu vaccination rates during the 2013-2014 flu season using Tableau.</p>
+			  </div>
+		</div>
+	  </div>
+
 	</div>
 </div>
 
